# PetIGA

./: .mailmap  CMakeLists.txt  LICENSE  LICENSE.rst  README  README.rst  gmakefile  makefile
conf/: petigarules  petigatest  petigavariables
demo/: AdaptiveL2Projection.c  AdvectionDiffusion.c  BoundaryIntegral.c  Bratu.c  BratuFJ.F90  CahnHilliard2D.c  CahnHilliard3D.c  ClassicalShell.c  ClassicalShell.py  ElasticRod.c  ElasticRodFJ.F90  Elasticity.c  Elasticity3D.c  HyperElasticity.c  InputOutput.c  L2Proj1D.c  L2Proj2D.c  L2Projection.c  Laplace.c  LoggChallenge.c  NavierStokesKorteweg2D.c  NavierStokesVMS.c  Neumann.c  NitscheMethod.c  PatternFormation.c  PhaseFieldCrystal2D.c  Poisson.c  Poisson1D.c  Poisson2D.c  Poisson3D.c  PoissonPlot.py  Richards.c  ShallowWater.c  TwoPhaseTwoComponent.c  makefile  shell.py
demo/AutoDiff/: Bratu.c  BratuC99.c  BratuCXX.cxx  BratuF90.F90  BratuFAD.cxx  CahnHilliard.h  CahnHilliard.hpp  CahnHilliardMixed.c  CahnHilliardMixedC99.c  CahnHilliardMixedCXX.cxx  CahnHilliardMixedFAD.cxx  CahnHilliardMixedFAD.cxx.fast  CahnHilliardMixedFAD.cxx.slow  CahnHilliardPrimal.c  CahnHilliardPrimalC99.c  CahnHilliardPrimalCXX.cxx  CahnHilliardPrimalFAD.cxx  makefile  makefile.fadbad  makefile.minifad  makefile.sacado  sacado-build.sh
demo/AutoDiff/petiga/cxx/: function.hpp  iefunction.hpp  iejacobian.hpp  ifunction.hpp  ijacobian.hpp  jacobian.hpp  lookup.hpp  system.hpp
demo/AutoDiff/petiga/fad/: adtype.hpp  jacobian.hpp
demo/PhaseFieldCrystal/: Mixed222Stable.c  makefile
docs/: makefile
docs/manual/: INSTALL.rst  INSTALL.txt  Makefile  OVERVIEW.rst  OVERVIEW.txt  TUTORIAL.rst  TUTORIAL.txt  abstract.txt  conf.py  index.rst  index.txt  links.txt  make.bat  manual.rst  toctree.txt
include/: makefile  petiga.h  petigaprobe.h  petscts1.h  petscts2.h
include/petiga/: petiga.hpp
include/petiga/cxx/: function.hpp  iejacobian.hpp  ifunction.hpp  ijacobian.hpp  lookup.hpp  system.hpp
include/petiga/fad/: iejacobian.hpp  ijacobian.hpp
lib/petiga/conf/: rules  test  variables
lib/petiga/make/: rules  variables
src/: makefile  petiga.c  petiga1d.F90  petiga1d.f90  petiga2d.F90  petiga2d.f90  petiga3d.F90  petiga3d.f90  petigaaxis.c  petigabasis.c  petigabl.h  petigabound.c  petigabsb.f90.in  petigabsp.F90  petigabsp.f90  petigabsp.f90.in  petigacol.c  petigacomp.c  petigadet.f90.in  petigadm.c  petigadraw.c  petigaelem.c  petigafdjac.c  petigaform.c  petigaftn.F90  petigaftn.h  petigaftnc.c  petigageo.f90  petigageo.f90.in  petigaglp.f90.in  petigagrid.c  petigagrid.h  petigaint.F90  petigaint.f90  petigainv.f90.in  petigaio.c  petigaksp.c  petigalgb.f90.in  petigamap.f90.in  petigamapgeo.f90.in  (+36 more)
test/: ConvTest.c  ConvTest.py  FixTable.c  GeometryMap.c  IGACreate.c  IGACreate.py  IGAErrNorm.c  IGAErrorNorm.c  IGAFixTable.c  IGAGeometryMap.c  IGAInputOutput.c  IGAProbe.c  Oscillator.c  Oscillator.py  Oscillator1.c  Oscillator2.c  Test_Eval.c  Test_SNES_2D.c  makefile
